# protectharvestcreek

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Caddyfile  Dockerfile  app.py  compose.override.yaml  compose.yaml  config.py  justfile  lefthook.yml  models.py  prompts.py  pyproject.toml  utils.py
.github/workflows/: ci.yml  publish.yml
docs/: fowler_housing_development.md  hanson_lane_annexation.md  talking_points_may_2026.md
docs/superpowers/plans/: 2026-04-10-whats-going-on-explainer.md  2026-04-10-whats-going-on-explainer.md.tasks.json
scripts/: extract_comments.py
static/css/: style.css
static/js/: app.js  app.v2.js
templates/: index.html  whats-going-on.html
templates/partials/: error.html  result.html
tests/: test_smoke.py
